added paper 4, changed format of talks page, tidied format of home as well

--- a/home.html
+++ b/home.html
@@ -34,26 +34,30 @@
 			  			<ul class="pt-2 px-5">
 				  			<li>
 				  				I have an recently published paper with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>, <i><b>On the spectrum of limit models</b></i> (Annals of Pure and Applied Logic, Volume 176, Issue 10, 2025). We prove that in a nice enough AEC with a well behaved independence relation, long limit models are isomorphic, and short limit models are distinct:
-				  				<br>
 
-				  				<p class="px-2"><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a> <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a> <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.</p>
-				  			</li>
-				  			<li>
-				  				I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a>:<br>
-				  				<p class="px-2"><a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>.</p>
+				  				<p class="px-3"><a href="https://doi.org/10.1016/j.apal.2025.103647">Published version</a>, <a href="./publications/on-the-spectrum-of-limit-models.pdf">PDF</a>, <a href="https://arxiv.org/abs/2503.11605">arXiv</a>.</p>
+
+				  				<p>I gave a talk about this paper at the <a href="https://www.colloquium.co/lc2025">2025 Logic Colloquium in Vienna</a> (<a href="./talks/ASL-Vienna-2025-extended-cut.pdf">Slides</a>).</p>
 				  			</li>
 				  			<li>
 				  				I have an upcoming paper, <i><b>The spectrum of limit models in a first order setting</b></i>, which greatly simplifies the proof of the main result of <i>On the spectrum of limit models</i> when we restrict to first order model theory:
 				  				<br>
 
-				  				<p class="px-2"><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a> <a href="https://arxiv.org/abs/2510.03459">arXiv</a>.</p>
+				  				<p class="px-3"><a href="./publications/the-spectrum-of-limit-models-in-a-first-order-setting.pdf">PDF</a>, <a href="https://arxiv.org/abs/2510.03459">arXiv</a>.</p>
 				  			</li>
 
 		  					<li>
-		  						And another upcoming paper, <i><b>Long limit models are isomorphic assuming a splitting-like relation</b></i>, which generalises (to my knowledge) all positive isomorphism results of limit models in AECs with amalgamation, including the main result of Chapter 3 of <i>On the spectrum of limit models</i>:
+		  						Another upcoming paper, <i><b>Long limit models are isomorphic assuming a splitting-like relation</b></i>, which generalises (to my knowledge) all positive isomorphism results of limit models in AECs with amalgamation, including the main result of Chapter 3 of <i>On the spectrum of limit models</i>:
 				  				<br>
 
-		  						<p class="px-2"><a href="./publications/long-limit-models-are-isomorphic-assuming-a-splitting-like-relation.pdf">PDF</a>, <a href="https://arxiv.org/abs/2511.18665">arXiv</a>.</p>
+		  						<p class="px-3"><a href="./publications/long-limit-models-are-isomorphic-assuming-a-splitting-like-relation.pdf">PDF</a>, <a href="https://arxiv.org/abs/2511.18665">arXiv</a>.</p>
+		  					</li>
+
+		  					<li>
+		  						And a third upcoming paper, <i><b>Disjoint non-forking amalgamation in stable AECs</b></i>, which shows that in a nice enough AEC with a well behaved independence relation, all high cofinality limit models are disjoint amalgamation bases, and if the relation is nice enough, we can also guarantee independence of given singletons over opposite models in the amalgamation</i>:
+				  				<br>
+
+		  						<p class="px-3"><a href="./publications/disjoint-non-forking-amalgamation-in-stable-AECs.pdf">PDF</a>, <a href="https://arxiv.org/abs/2601.12439">arXiv</a>.</p>
 		  					</li>
 
 				  		</ul>
