--- a/talks.html
+++ b/talks.html
@@ -24,111 +24,89 @@
 		    
 		    <div class="col-sm-9 max-vh-100 overflow-auto">
 
-		  		<div class="p-5">
+		  		<div class="container p-5">
 			  		<h1>Talks</h1>
 			  		Below is a list of academic talks I have given. Talks aimed primarily at undergraduate or pre-university students are listed in <a href="./teaching.html">Teaching</a>.
-		  			<ul>
-		  				<div class="py-2">
-			  				<li>
-			  					<h5><b><i>On the spectrum of limit models</i></b>, 10th<sup>th</sup> July 2025</h5>
-			  					<p>Contributed talk for <a href="https://www.colloquium.co/lc2025">2025 Vienna Logic Colloquium</a>. A 15 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
-			  					<ul>
-			  						<li><a href="./talks/ASL-Vienna-2025.pdf">Slides</a></li>
-			  						<li><a href="./talks/ASL-Vienna-2025-extended-cut.pdf">'Extended cut'</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-		  				<div class="py-2">
-			  				<li>
-			  					<h5><b><i>On the spectrum of limit models</i></b>, 5th<sup>th</sup> April 2025</h5>
-			  					<p>Part of the 2025 <a href="https://nemtd.wescreates.wesleyan.edu/index.html">Northeast Model Theory Day</a>. A brief 10 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
-			  					<ul>
-			  						<li><a href="./talks/on_the_spectrum_of_limit_models_talk_NEMTD.pdf">Slides</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-		  				<div class="py-2">
-			  				<li>
-			  					<h5><b><i>On the spectrum of limit models</i></b>, 25<sup>th</sup> March 2025</h5>
-			  					<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar, discussing results and sketching some proofs from <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
-			  					<ul>
-			  						<li><a href="./talks/gstmts-on-the-spectrum-of-limit-models.pdf">Handwritten notes</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-		  				<div class="py-2">
-			  				<li>
-			  					<h5><b><i>The many faces of superstability</i></b>, 18<sup>th</sup> Feb 2025</h5>
-			  					<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar on equivelent definitions of superstability in first order logic. Based on sections of Shelah's book <i>Classification theory and the number of nonisomorphic models</i>.</p>
-			  					<ul>
-			  						<li><a href="./talks/gstmts-many-faces-of-superstability.pdf">Handwritten notes</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>Independence relations from the categorical point of view</i></b>, 20<sup>th</sup> Dec 2024</h5>
-			  					<p>A lecture in the CMU Graduate Set Theory and Model Theory Seminar. Based on the paper with same name by Lieberman, Rosicky&#769;, and Vasey.</p>
-			  					<ul>
-			  						<li><a href="./talks/gstmts-lrv.pdf">Handwritten notes</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-		  				<div class="py-2">
-			  				<li>
-			  					<h5><b><i>On the spectrum of limit models</i></b>, 17<sup>th</sup> Oct - 14<sup>th</sup> Nov 2024</h5>
-			  					<p>4 lectures in the CMU Model Theory Seminar. Based on an early version of the paper with same name, joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a> (see publications).</p>
-			  					<ul>
-			  						<li><a href="./talks/on-the-spectrum-of-limit-models-cmu-seminar-notes.pdf">Handwritten notes</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>An introduction to abstract elementary classes</i></b>, 25<sup>th</sup> June 2024</h5>
-			  					<p>2 lectures at the 2024 <a href="https://math.artsandsciences.baylor.edu/conferences/waeco-workshop">'WAECO' AEC conference</a>, with a proof of Shelah's presentation theorem. Based on Rami Grossberg's Model Theory 2 course.</p>
-			  					<ul>
-			  						<li><a href="./talks/waeco-talk-part-1.pdf">Part 1 Handwritten notes</a></li>
-			  						<li><a href="./talks/waeco-talk-part-2.pdf">Part 2 Handwritten notes</a></li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>Uniqueness of limit models</i></b>, 18<sup>th</sup> April - 25<sup>th</sup> April 2024</h5>
-			  					<p>2 lectures in the CMU Model Theory Seminar on proving uniqueness of limit models in superstable AECs with symmetry. Based on chapter 15 of Sebastien Vasey's AEC lecture notes and chapter 5 of Vasey's <i>The categoricity spectrum of large AECs</i>.</p>
-			  					<ul>
-			  						<li>Notes not available</li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>Forking in superstable AECs</i></b>, 29<sup>th</sup> Feb 2024</h5>
-			  					<p>A lecture in the CMU Model Theory Seminar on the properties of &lambda;-forking in &lambda;-superstable AECs, including canonicity. Based on chapters 13 and 14 of Sebastien Vasey's AEC lecture notes.</p>
-			  					<ul>
-			  						<li>Notes not available</li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>Categoricity theorems</i></b>, 15<sup>th</sup> Feb 2024</h5>
-			  					<p>A lecture at CMU's Graduate Student and Postdoc Seminar giving the broad strokes of Shelah's categoricity theorem. Based on Shelah's #31 paper <i>Categoricity of uncountable theories</i>.</p>
-			  					<ul>
-			  						<li>Notes not available</li>
-			  					</ul>
-			  				</li>
-			  			</div>
-			  			<div class="py-2">
-			  				<li>
-			  					<h5><b><i>Logic with the quantifier 'there exist uncountably many'</i></b>, 7<sup>th</sup> April 2023</h5>
-			  					<p>A lecture in the CMU Graduate Set Theory and Model Theory Seminar. Based on the paper with same name by Jerome Keisler.</p>
-			  					<ul>
-			  						<li>Notes not available</li>
-			  					</ul>
-			  				</li>
-			  			</div>
+		  			<ul class="px-4">
+			  			<li class="py-2">
+			  				<h5><b><i>On the spectrum of limit models</i></b>, 10th<sup>th</sup> July 2025</h5>
+			  				<p>Contributed talk for <a href="https://www.colloquium.co/lc2025">2025 Vienna Logic Colloquium</a>. A 15 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
+			  				<ul>
+			  					<li><a href="./talks/ASL-Vienna-2025.pdf">Slides</a></li>
+			  					<li><a href="./talks/ASL-Vienna-2025-extended-cut.pdf">'Extended cut'</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>On the spectrum of limit models</i></b>, 5th<sup>th</sup> April 2025</h5>
+			  				<p>Part of the 2025 <a href="https://nemtd.wescreates.wesleyan.edu/index.html">Northeast Model Theory Day</a>. A brief 10 minute overview of <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
+			  				<ul>
+			  					<li><a href="./talks/on_the_spectrum_of_limit_models_talk_NEMTD.pdf">Slides</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>On the spectrum of limit models</i></b>, 25<sup>th</sup> March 2025</h5>
+			  				<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar, discussing results and sketching some proofs from <a href="./publications/on-the-spectrum-of-limit-models.pdf">the paper of the same name</a> (joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a>).</p>
+			  				<ul>
+			  					<li><a href="./talks/gstmts-on-the-spectrum-of-limit-models.pdf">Handwritten notes</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>The many faces of superstability</i></b>, 18<sup>th</sup> Feb 2025</h5>
+			  				<p>A somewhat informal lecture in the CMU Graduate Set Theory and Model Theory Seminar on equivelent definitions of superstability in first order logic. Based on sections of Shelah's book <i>Classification theory and the number of nonisomorphic models</i>.</p>
+			  				<ul>
+			  					<li><a href="./talks/gstmts-many-faces-of-superstability.pdf">Handwritten notes</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>Independence relations from the categorical point of view</i></b>, 20<sup>th</sup> Dec 2024</h5>
+			  				<p>A lecture in the CMU Graduate Set Theory and Model Theory Seminar. Based on the paper with same name by Lieberman, Rosicky&#769;, and Vasey.</p>
+			  				<ul>
+			  					<li><a href="./talks/gstmts-lrv.pdf">Handwritten notes</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>On the spectrum of limit models</i></b>, 17<sup>th</sup> Oct - 14<sup>th</sup> Nov 2024</h5>
+			  				<p>4 lectures in the CMU Model Theory Seminar. Based on an early version of the paper with same name, joint work with <a href="https://sites.baylor.edu/marcos_mazari/">Marcos Mazari-Armida</a> (see publications).</p>
+			  				<ul>
+			  					<li><a href="./talks/on-the-spectrum-of-limit-models-cmu-seminar-notes.pdf">Handwritten notes</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>An introduction to abstract elementary classes</i></b>, 25<sup>th</sup> June 2024</h5>
+			  				<p>2 lectures at the 2024 <a href="https://math.artsandsciences.baylor.edu/conferences/waeco-workshop">'WAECO' AEC conference</a>, with a proof of Shelah's presentation theorem. Based on Rami Grossberg's Model Theory 2 course.</p>
+			  				<ul>
+			  					<li><a href="./talks/waeco-talk-part-1.pdf">Part 1 Handwritten notes</a></li>
+			  					<li><a href="./talks/waeco-talk-part-2.pdf">Part 2 Handwritten notes</a></li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>Uniqueness of limit models</i></b>, 18<sup>th</sup> April - 25<sup>th</sup> April 2024</h5>
+			  				<p>2 lectures in the CMU Model Theory Seminar on proving uniqueness of limit models in superstable AECs with symmetry. Based on chapter 15 of Sebastien Vasey's AEC lecture notes and chapter 5 of Vasey's <i>The categoricity spectrum of large AECs</i>.</p>
+			  				<ul>
+			  					<li>Notes not available</li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>Forking in superstable AECs</i></b>, 29<sup>th</sup> Feb 2024</h5>
+			  				<p>A lecture in the CMU Model Theory Seminar on the properties of &lambda;-forking in &lambda;-superstable AECs, including canonicity. Based on chapters 13 and 14 of Sebastien Vasey's AEC lecture notes.</p>
+			  				<ul>
+			  					<li>Notes not available</li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>Categoricity theorems</i></b>, 15<sup>th</sup> Feb 2024</h5>
+			  				<p>A lecture at CMU's Graduate Student and Postdoc Seminar (GSPS) giving the broad strokes of Shelah's categoricity theorem. Based on Shelah's #31 paper <i>Categoricity of uncountable theories</i>.</p>
+			  				<ul>
+			  					<li>Notes not available</li>
+			  				</ul>
+			  			</li>
+			  			<li class="py-2">
+			  				<h5><b><i>Logic with the quantifier 'there exist uncountably many'</i></b>, 7<sup>th</sup> April 2023</h5>
+			  				<p>A lecture in the CMU Graduate Set Theory and Model Theory Seminar (GSTMTS). Based on the paper with same name by Jerome Keisler.</p>
+			  				<ul>
+			  					<li>Notes not available</li>
+			  				</ul>
+			  			</li>
 		  			</ul>
 		  		</div>
 		    </div>
