--- a/teaching.html
+++ b/teaching.html
@@ -27,49 +27,40 @@
 		  			<h3>Carnegie Mellon</h3>
 
 					<p class="container px-3">During my time at Carnegie Mellon, I was the 2024 recipient of the Mathematical Sciences department's graduate <b><a href="https://www.cmu.edu/math/grad/phd/graduate-student-prizes.html">Outstanding Teaching Prize</a></b>.</p>
-					<p class="container px-3">I am also a cofounder and coorgainiser of the <b><a href="https://programs.mcs.cmu.edu/drp/">CMU-UPitt Directed Reading Program (DRP)</a></b>, and have served as a mentor; see below.</p>
+					<p class="container px-3">I am also a cofounder and coorgainiser of the <b><a href="https://programs.mcs.cmu.edu/drp/">CMU-UPitt Directed Reading Program (DRP)</a></b>, and served as a mentor in Fall 2025; see below.</p>
 
 			  		<h4>Teaching Assistant work</h4>
 			  		<p class="container px-3">I have been a teaching assistant for the following courses:</p>
 		  			<ul class="px-5">
 		  				<li>
-			  				<b>Fall 2025</b> 
-			  				<ul>
-			  					<li>Mini 1: TA for <i>Introduction to Mathematical Concepts</i> (21-108)</li>
-			  					<li>Mini 2: Lead TA for <i>Precalculus</i> (21-090)</li>
-			  				</ul>
+			  				<b>Spring 2026:</b> Lead TA for <i>Concepts of Mathematics</i> (21-127)
 			  			</li>
 		  				<li>
-			  				<b>Spring 2025</b> 
-			  				<p>Lead TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
+			  				<b>Fall 2025:</b> Mini 1: TA for <i>Introduction to Mathematical Concepts</i> (21-108); Mini 2: Lead TA for <i>Precalculus</i> (21-090)
+			  			</li>
+		  				<li>
+			  				<b>Spring 2025:</b> Lead TA for <i>Calculus in Three Dimensions</i> (21-259)
 			  			</li>
 			  			<li>
-			  				<b>Fall 2024</b> 
-			  				<p>The TA for <i>Introduction to Mathematical Concepts</i> (21-108)</p>
+			  				<b>Fall 2024:</b> TA for <i>Introduction to Mathematical Concepts</i> (21-108)
 			  			</li>
 			  			<li>
-			  				<b>Spring 2024</b> 
-			  				<p>Lead TA for <i>Concepts of Mathematics</i> (21-127)</p>
+			  				<b>Spring 2024:</b> Lead TA for <i>Concepts of Mathematics</i> (21-127)
 			  			</li>
 			  			<li>
-			  				<b>Fall 2023</b> 
-			  				<p>Lead TA for <i>Concepts of Mathematics</i> (21-127)</p>
+			  				<b>Fall 2023:</b> Lead TA for <i>Concepts of Mathematics</i> (21-127)
 			  			</li>
 			  			<li>
-			  				<b>Spring 2023</b> 
-			  				<p>Lead TA for <i>Vector Calculus for Computer Scientists</i> (21-266)</p>
+			  				<b>Spring 2023:</b> Lead TA for <i>Vector Calculus for Computer Scientists</i> (21-266)
 			  			</li>
 			  			<li>
-			  				<b>Fall 2022</b> 
-			  				<p>Lead TA for <i>Concepts of Mathematics</i> (21-127)</p>
+			  				<b>Fall 2022:</b> Lead TA for <i>Concepts of Mathematics</i> (21-127)
 			  			</li>
 			  			<li>
-			  				<b>Spring 2022</b> 
-			  				<p>TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
+			  				<b>Spring 2022:</b> TA for <i>Calculus in Three Dimensions</i> (21-259)
 			  			</li>
 			  			<li>
-			  				<b>Fall 2021</b> 
-			  				<p>TA for <i>Calculus in Three Dimensions</i> (21-259)</p>
+			  				<b>Fall 2021:</b> TA for <i>Calculus in Three Dimensions</i> (21-259)
 			  			</li>
 			  		</ul>
 
