oops there was an amalgamationamalgamation in the talks section

--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 		  				<li>
 		  					<h5><i><b>Disjoint non-forking amalgamation in strictly stable AECs</b></i></h5>
 
-		  					<p>We prove that in a nice AEC with a somewhat well behaved independence relation (assuming only weak forms of uniqueness, existence, and non-forking amalgamation), all high cofinality limit models are disjoint amalgamation bases. We even show that, if the 'weak' properties are strengthened, we can also guarantee independence of given singletons over opposite models in the disjoint amalgamationamalgamation.</i>.</p>
+		  					<p>We prove that in a nice AEC with a somewhat well behaved independence relation (assuming only weak forms of uniqueness, existence, and non-forking amalgamation), all high cofinality limit models are disjoint amalgamation bases. We even show that, if the 'weak' properties are strengthened, we can also guarantee independence of given singletons over opposite models in the disjoint amalgamation.</i>.</p>
 
 		  					<p><a href="./publications/disjoint-non-forking-amalgamation-in-stable-AECs.pdf">PDF</a>, <a href="https://arxiv.org/abs/2601.12439">arXiv</a>.</p>
 		  				</li>
